--- a/pages/content-api/search/semantic-search.mdx
+++ b/pages/content-api/search/semantic-search.mdx
@@ -155,12 +155,12 @@ For example, let's' consider you’re searching for articles related to web deve
         ```javascript copy
         await unbody.get
                     .textDocument
-                    .nearText({
-                        concepts: [...concepts representing “web development”...],
-                        moveTo: {
-                            concepts: ["frontend", "backend"],
-                            force: 0.5
-                        }
+                    .search
+                    .about("web development", {
+                      moveTo: {
+                          concepts: ["frontend", "backend"],
+                          force: 0.5
+                      }
                     })
                     .exec()
         ```
@@ -170,46 +170,12 @@ For example, let's' consider you’re searching for articles related to web deve
         query{
           Get{
             TextDocument(
+              concepts: ["web development"],
               nearText: {
-                concepts: [...concepts representing “web development”...],
                 moveTo: {
                   concepts: ["frontend", "backend"],
                   force: 0.5
                 }
-              }
-            ){
-              title
-              text
-            }
-          }
-        }
-        ```
-    </Tab>
-</Tabs>
-
-### Utilizing Custom Vectors
-
-If you have access to custom words or document vectors, **`nearVector`** allows you to integrate them directly into your search queries.
-
-**Example: Search near a Vector**
-<Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"SDK (.ts)"}>
-        ```javascript copy
-        unbody.get
-              .textDocument
-              .nearVector({
-                  vector: [...your custom word vector...]
-              })
-              .exec()
-        ```
-    </Tab>
-    <Tab title={"GraphQl formatted"}>
-        ```graphql
-        query {
-          Get {
-            TextDocument(
-              nearVector: {
-                vector: [...your custom word vector...]
               }
             ){
               title
@@ -271,7 +237,7 @@ You can also apply filters to your semantic search queries. It helps to narrow d
 
         ```javascript copy
         unbody.get
-              .article
+              .textDocument
               .where(({Equal}) => ({
                   tags: Equal("tutorial")
               }))
