--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -15,7 +15,7 @@ In this guide, we’ll walk you through building your first project with Unbody,
 
 ## Prerequisites
 
-1. An Unbody account: Sign up at [Unbody.io](https://unbody.io/).
+1. An Unbody account: Sign up at [Unbody dashboard](https://app.unbody.io/).
 2. A Data source: For this guide, we’ll use a **Google Drive folder** with a few files (e.g., [Markdown](/content-api/data-types/textdocument), [PDFs](/content-api/data-types/textdocument), [images](/content-api/data-types/imageblock), or a short [video](/content-api/data-types/videofile) under 1 minute). Unbody also supports many other prebuilt integrations (like [Discord](/providers/discord) or [GitHub](/providers/github) and [custom data ingestion](/data-ingestion/push-api).
 3. Freemium plan: Unbody’s free plan is great for testing but has limits on file count and size, so keep your test folder small. [Learn more about pricing](https://unbody.io/pricing).
 
