fix: authentication, overview, semantic-search

--- a/pages/content-api/overview.mdx
+++ b/pages/content-api/overview.mdx
@@ -6,9 +6,9 @@ The **Content API** lets you interact with enriched, AI-ready data in Unbody. Bu
 
 ## What Can You Do with the Content API?
 
-- Perform traditional database operations: filter, sort, group, and limit results.
-- Run semantic searches using vector similarity and contextual queries.
-- Execute generative tasks such as metadata creation, text synthesis, and data augmentation.
+- Perform traditional database operations: [filter](/content-api/filters), sort, group, and limit results.
+- Run [semantic searches](/content-api/search/semantic-search) using vector similarity and contextual queries.
+- Execute [generative](/content-api/generative) tasks such as metadata creation, text synthesis, and data augmentation.
 - Work seamlessly through GraphQL or a JavaScript SDK.
 
 ## What's Covered in This Section?
@@ -36,14 +36,14 @@ The **Content API** lets you interact with enriched, AI-ready data in Unbody. Bu
         </div>
     </Cards.Card>
     <Cards.Card title={"Query Methods"}
-                href={"/content-api/query-methods"}
+                href={"/content-api/query-methods/get"}
                 arrow={true}>
         <div className={"mx-4 text-xs [&>*]:leading-5 leading-1 opacity-75"}>
             Retrieve and aggregate data efficiently.
         </div>
     </Cards.Card>
     <Cards.Card title={"Data Types"}
-                href={"/content-api/data-types"}
+                href={"/content-api/data-types/overview"}
                 arrow={true}>
         <div className={"mx-4 text-xs [&>*]:leading-5 leading-1 opacity-75"}>
             Understand the custom types supported by the API.
