--- a/pages/content-api/search/semantic-search.mdx
+++ b/pages/content-api/search/semantic-search.mdx
@@ -1,4 +1,4 @@
-import {Tabs, Tab} from "@nextui-org/react";
+import { Tab, Tabs } from "@nextui-org/react";
 
 # Semantic Search
 
@@ -14,7 +14,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
     <Tab title={"SDK (.ts)"}>
         ```javascript copy
         unbody.get
-              .<object_name>
+              .<collectionName>
               .search
               .about("query", {...options})
         ```
@@ -23,7 +23,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
         ```graphql
         query{
           Get{
-            <ObjectName>(
+            <collectionName>(
               nearText: {
                 concepts: ["query"],
                 ...options
@@ -165,7 +165,7 @@ For example, let's' consider you’re searching for articles related to web deve
                     .exec()
         ```
     </Tab>
-    <Tab title={"GraphQL formatted"}>
+    <Tab title={"GraphQL"}>
         ```graphql
         query{
           Get{
@@ -203,7 +203,7 @@ If you have access to custom words or document vectors, **`nearVector`** allows 
               .exec()
         ```
     </Tab>
-    <Tab title={"GraphQl formatted"}>
+    <Tab title={"GraphQl"}>
         ```graphql
         query {
           Get {
@@ -221,85 +221,61 @@ If you have access to custom words or document vectors, **`nearVector`** allows 
     </Tab>
 </Tabs>
 
-## Optimizing Search with Boosting and Filtering
+## Optimizing Search with Filtering
 
-Let us now have a look at how you can enhance your search results by boosting certain properties and applying filters to hone in on the most relevant data.
-
-### Property Boosting
-
-Some of the properties in the data are more relevant than others. You can boost the relevance of specific properties in your data to ensure they have a greater impact on the search results.
-
-**Example: Boosting Titles**
-
-<Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
-    <Tab title={"SDK (.ts)"}>
-        ```javascript copy
-        await unbody.get
-                    .textDocument
-                    .search
-                    .find("web development", ["title"])
-                    .exec()
-        ```
-    </Tab>
-    <Tab title={"GraphQl formatted"}>
-        ```graphql
-        query {
-          Get {
-            TextDocument(
-              bm25: {
-                query: "web development",
-                properties: ["title^2"]
-              }
-            ){
-              title
-              text
-            }
-          }
-        }
-        ```
-    </Tab>
-</Tabs>
+Let us now have a look at how you can enhance your search results by boosting certain properties and applying [filters](/content-api/filters) to hone in on the most relevant data.
 
 ### Conditional Filtering
 
-You can also apply filters to your semantic search queries. It helps to narrow down results based on specific conditions.
+You can also apply [filters](/content-api/filters) to your semantic search queries. It helps to narrow down results based on specific conditions.
 
-**Example: Filtering by Tags**
+**Example: Filtering by mimeType**
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"SDK (.ts)"}>
 
         ```javascript copy
         unbody.get
-              .article
-              .where(({Equal}) => ({
-                  tags: Equal("tutorial")
-              }))
+              .textDocument
+              .where({ mimeType: "text/markdown" })
               .search
               .about("web development")
               .exec()
         ```
     </Tab>
-    <Tab title={"GraphQl formatted"}>
+    <Tab title={"GraphQl"}>
         ```graphql
-        query{
-          Get{
+        query {
+          Get {
             TextDocument(
-              bm25: {
-                query: "web development"
-              },
-              where: {
-                path: ["tags"],
-                operator: Equal,
-                valueText: "tutorial"
+              where: { operator: Equal, path: "mimeType", valueText: "text/markdown" }
+              nearText: { concepts: ["web development"] }
+            ) {
+              _additional {
+                certainty
+                distance
               }
-            ){
-              title
-              text
+              createdAt
+              html
+              mimeType
+              modifiedAt
+              originalName
+              path
+              pathString
+              remoteId
+              sourceId
+              subtitle
+              description
               tags
+              text
+              title
+              properties
+              toc
+              authors
             }
           }
         }
+
         ```
     </Tab>
 </Tabs>
